# ehrshot-benchmark

./: .gitignore  DUA.md  LICENSE  README.md  fix_labels.py  fix_shots.py  pyproject.toml  requirements.txt  run_all.py  run_all.sh  run_all_slurm.sh
ehrshot/: 10_cis.py  1_create_femr_database.py  1_create_femr_database_slurm.sh  1_generate_labels.py  2_consolidate_labels.py  2_generate_labels.py  2_generate_labels_and_features.py  2_generate_labels_and_features_slurm.sh  3_consolidate_labels.py  3_generate_baseline_features.py  3_generate_clmbr_representations.py  3_generate_clmbr_representations_slurm.sh  3a_consolidate_labels.py  3b_generate_features.py  3c_generate_clmbr_representations.py  4_generate_agr_features.py  4_generate_clmbr_features.py  4_generate_count_features.py  4_generate_features.py  4_generate_llm_features.py  4_generate_motor_features.py  4_generate_shot.py  4_generate_shot_slurm.sh  4_generate_text_features.py  5_eval.py  5_eval_slurm.sh  5_generate_clmbr_features.py  5_generate_clmbr_representations_slurm.sh  5_generate_shots.py  6_eval.py  6_generate_shots.py  6_make_figures.py  6_make_figures_slurm.sh  7_eval.py  7_eval_finetune.py  7_make_results_plots.py  7a_eval_on_starr.py  7b_eval_zero_shot.py  8_make_cohort_plots.py  8_make_figures.py  (+26 more)
ehrshot/bash_scripts/: 10_cis.sh  1_create_femr_database.sh  1_generate_labels.sh  2_consolidate_labels.sh  2_generate_labels.sh  3_consolidate_labels.sh  3_generate_baseline_features.sh  4_generate_agr_features.sh  5_generate_shots.sh  (+20 more)
notebooks/: CLMBR Vocab Analysis.ipynb  EHRSHOT Dataset Stats.ipynb
(+49 files in other folders)
